--- a/static/messaging.css
+++ b/static/messaging.css
@@ -1,3 +1,8 @@
+* {
+  font-family:sans-serif;
+}
+
+
 body {
     margin:0;
     background-size: cover;
@@ -20,19 +25,46 @@ body {
   p { color:black;
   }
 
+  #click {
+    color:black;
+    font-size:17px;
+    text-align: center;
+    padding: 16px 16px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    display: block;
+    text-decoration: none;
+  }
+
+  #click1 {
+    color: red;
+    font-size:17px;
+    text-align: center;
+    padding: 16px 16px;
+    outline: none;
+    border: none;
+    cursor: pointer;
+  }
+
   .topnav {
     overflow: hidden;
-    background-color:white;
+    background-color:#E1E1E1;
+    position: fixed;
+    top: 0;
+    width: 100%;
   }
 
   .topnav a {
     float: left;
-    color: black;
+    color: white;
     text-align: center;
+    margin-top: 0px;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
     font-family:Arial;
+    display: block;
   }
 
   .topnav a:hover {
@@ -41,8 +73,8 @@ body {
   }
 
   .topnav active {
-    background-color: white;
-    color: white;
+    background-color: #E1E1E1;
+    color: #E1E1E1;
   }
 
   .table {
@@ -139,4 +171,110 @@ body {
   #message {
     width: 100px;
     height: 20px;
+  }
+
+  form.example input[type=text] {
+    padding: 10px;
+    font-size: 17px;
+    border: 1px solid grey;
+    float: left;
+    width: 80%;
+    background: #f1f1f1;
+  }
+
+  form.example button {
+    float: left;
+    width: 20%;
+    padding: 10px;
+    background: #2196F3;
+    color: white;
+    font-size: 17px;
+    border: 1px solid grey;
+    border-left: none;
+    cursor: pointer;
+  }
+
+  form.example button:hover {
+    background: #0b7dda;
+  }
+
+  form.example::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  #time{
+    color: black;
+    font-size:20px;
+    letter-spacing: 1px;
+    float: right;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    outline: none;
+    text-transform: uppercase;
+    background-size: 400%;
+  }
+
+  .sidebar {
+    height: 100%;
+    width: 14%;
+    position: fixed;
+    z-index: 1;
+    top: 52px;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 16px;
+  }
+
+  .sidebar a {
+    text-align: center;
+    font-family:sans-serif:
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    margin-bottom:10px;
+    font-size: 20px;
+    color: #818181;
+    display: block;
+  }
+
+  .sidebar a:hover {
+    color: #f1f1f1;
+  }
+
+  @media screen and (max-height: 450px) {
+    .sidebar {padding-top: 15px;}
+    .sidebar a {font-size: 18px;}
+  }
+
+  #formcontact {
+    position:relative;
+    max-width:300px;
+    left:15%;
+    top:8%;
+    height:40px;
+  }
+
+  #contactsearch {
+    position:relative;
+    margin:0px;
+    height:40px;
+  }
+
+  #select {
+    position:relative;
+    height:150px;
+    width:450px;
+    top:10%;
+    left:15%;
+  }
+
+  #msgs {
+    position:relative;
+    height:400px;
+    width:500px;
+    left:15%;
+    top:10%;
   }
