--- a/templates/about.html
+++ b/templates/about.html
@@ -6,10 +6,10 @@
 </head>
     <body>
 <div class="topnav">
-  <a class="index.html" href="index.html">Home</a>
-  <a href="login.html">Login</a>
-  <a href="contact.html">Contact</a>
-  <a href="about.html">About</a>
+  <a id="click" href="/">Home</a>
+  <a id="click" href="contact.html">Contact</a>
+  <a id="click" href="about.html">About</a>
+  <button onclick="document.getElementById('id01').style.display='block'" style="right:20%;" class="button">Login</button>
 </div>
 
 
@@ -35,7 +35,7 @@ tr:nth-child(even) {
 </head>
 <body>
 
-<h2>HTML Table</h2>
+<h2>About</h2>
 
 <table>
   <tr>
