--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,89 @@
-body {
+#body {
     margin: 0;
     font-family:sans-serif;
+    background-color: #E1E1E1;
   }
+
+#submit {
+  height:30px;
+  width:75px;
+  color: white;
+  background-color:black;
+  font-family:sans-serif;
+  font-size:15px;
+  float:right;
+  border: none;
+  text-decoration: none;
+  margin: 4px 2px;
+  border-radius: 25px;
+  cursor: pointer;
+
+}
+
+#click {
+  color:black;
+  font-size:17px;
+  text-align: center;
+  padding: 16px 16px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  display: block;
+  text-decoration: none;
+}
 
 .main-pic {
     background: url(picture-1.jpg) no-repeat center;
     background-size: cover;
-    height: 800px;
-    position: relative;
+    height: 711px;
+    top:52px;
+    left:50px;
+    right:50px;
+    position: absolute;
+    z-index:-1;
   }
+
+#pw {
+  color:black;
+}
+
+#un {
+  color:black;
+}
+
+#label {
+  font-family:sans-serif;
+  font-size:15px;
+  color:white;
+  float:left;
+  height:20px;
+  width:20px;
+  cursor: pointer;
+  margin-left:0;
+}
+
+
+#label1 {
+  font-family:sans-serif;
+  font-size:15px;
+  color:black;
+  text-align:center;
+  margin-top:4px;
+  margin-left:4px;
+  float:left;
+  height:20px;
+  cursor: pointer;
+  margin-left:0;
+}
+
+#intro {
+  color:Black;
+  font-size:60px;
+  font-family:sans-serif;
+  float:center;
+  font-weight:600;
+  text-align: center;
+}
 
 .main-pic-text {
     text-align: center;
@@ -31,13 +106,11 @@ table, td {
     border:white;
   }
 
-.frgb {
-    animation-name: Sign-up;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
-    font-size:30px;
-    text-align: center;
+#frgb_body {
+  background-color:black;
+  height:300px;
 }
+
 
 @keyframes Sign-up {
   0%   {color:purple;}
@@ -54,54 +127,67 @@ h1 {color:white;
   text-align:center;
 }
 
-a {color:white;
- font-size:20px;
- font-family:monospace;
- text-align:center;
+a {
+  color:white;
+  font-size:17px;
+  font-family:monospace;
+  text-align:center;
 }
 
 p { color:white;
 }
 
 .topnav {
-overflow: hidden;
+  overflow: hidden;
+  background-color:#E1E1E1;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 .topnav a {
-float: left;
-color: black;
-text-align: center;
-padding: 14px 16px;
-text-decoration: none;
-font-size: 17px;
-font-family:Arial;
+  float: left;
+  color: white;
+  text-align: center;
+  margin-top: 0px;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  font-family:Arial;
+  display: block;
 }
 
 .topnav a:hover {
-background-color:gray;
-color:white;
+  background-color:gray;
+  color:white;
 }
 
 .topnav active {
-background-color: white;
-color: white;
+  background-color: #E1E1E1;
+  color: #E1E1E1;
 }
 
 input[type=text], input[type=password] {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
+  width: 98%;
+  display: block;
+  height: 50px;
+  background-color: rgba(255,255,255,0.07);
+  border-radius: 5px;
+  padding: 0 10px;
+  margin-top: 30px;
+  font-size: 14px;
+  font-weight: 300;
+  text-align:center;
 }
 
-button {
-  background-color: black;
-  color: white;
-  padding: 14px 16px;
-  border: none;
+.button {
+  color: red;
   font-size:17px;
+  text-align: center;
+  padding: 16px 16px;
+  background-color: #E1E1E1;
+  outline: none;
+  border: none;
   cursor: pointer;
 }
 
@@ -112,8 +198,7 @@ button:hover {
 .topnav button:hover {
     background-color:gray;
     color:white;
-    }
-
+}
 
 .cancelbtn {
   width: auto;
@@ -133,7 +218,7 @@ img.avatar {
 }
 
 .container {
-  padding: 16px;
+  padding:16px;
 }
 
 span.psw {
@@ -150,16 +235,26 @@ span.psw {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
   padding-top: 60px;
 }
 
 .modal-content {
-  background-color: #fefefe;
+  border-radius:25px;
+  position: relative;
+  background-color: white;
   margin: 5% auto 15% auto;
-  border: 1px solid #888;
-  width: 80%;
+  width:50%;
+}
+
+.modal-content:before, .modal-content:after {
+  content: '';
+  position: absolute;
+  left: -2px;
+  top: -2px;
+  width: (80%);
+  height: calc(100% + 4px);
+  z-index: -1;
+  animation: steam 5s infinite;
 }
 
 .close {
@@ -201,3 +296,140 @@ span.psw {
      width: 100%;
   }
 }
+
+#time{
+  color: black;
+  font-size:20px;
+  letter-spacing: 1px;
+  float: right;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  outline: none;
+  text-transform: uppercase;
+  background-size: 400%;
+}
+
+#cancel {
+  float: left;
+  color: white;
+  text-align: center;
+  padding: 6px 8px;
+  border:none;
+  border-radius: 25px;
+  text-decoration: none;
+  font-size: 17px;
+  font-family:Arial;
+}
+
+#create {
+  float: right;
+  background-color:#E1E1E1;
+  color: black;
+  padding: 6px 8px;
+  text-align: center;
+  border:none;
+  border-radius: 25px;
+  text-decoration: none;
+  font-size: 17px;
+  font-family:sans-serif;
+  margin-right:0;
+  cursor: pointer;
+}
+
+#forgot {
+  float: left;
+  background-color:#E1E1E1;
+  color: black;
+  padding: 6px 8px;
+  text-align: center;
+  border:none;
+  border-radius: 25px;
+  text-decoration: none;
+  font-size: 17px;
+  font-family:sans-serif;
+  margin-left:15px;
+  cursor: pointer;
+}
+
+#space {
+  height:50px;
+}
+
+#space1 {
+  height:30px;
+}
+
+#space2 {
+  width:100%;
+  text-align:center;
+}
+
+#text1 {
+  height: 500px;
+  top:763px;
+  left:50px;
+  right:50px;
+  position:absolute;
+}
+
+#pic2 {
+  height: 400px;
+  top:50px;
+  position:absolute;
+  z-index:-1;
+}
+
+#re {
+  color:white;
+  left:300px;
+  font-size:20px;
+  top:250px;
+  position:absolute;
+  height:20px;
+  width:100px;
+  border:none;
+  background-color:black;
+  border-radius:25px;
+  text-align: center;
+  text-decoration: none;
+  padding: 15px 4px;
+  font-family:sans-serif;
+  cursor: pointer;
+}
+
+.alert {
+  padding: 20px;
+  background-color: #f44336;
+  color: white;
+  opacity: 1;
+  transition: opacity 0.6s;
+  margin-top:52px;
+  z-index:1;
+}
+
+.alert1 {
+  padding: 20px;
+  background-color: #61de3e;
+  color: white;
+  opacity: 1;
+  transition: opacity 0.6s;
+  margin-top:52px;
+  z-index:1;
+}
+
+.closebtn1 {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn1:hover {
+  color: black;
+}
+
