--- a/static/style_account.css
+++ b/static/style_account.css
@@ -284,13 +284,9 @@ span.psw {
 }
 
 #click1 {
-  color: red;
-  font-size:17px;
-  text-align: center;
-  padding: 16px 16px;
-  outline: none;
-  border: none;
-  cursor: pointer;
+  position:fixed;
+  float:bottom;
+  bottom:15px;
 }
 
 #myInput {
@@ -329,7 +325,7 @@ span.psw {
 
 .sidebar {
   height: 100%;
-  width: 14%;
+  width: 170px;
   position: fixed;
   z-index: 1;
   top: 52px;
@@ -340,7 +336,8 @@ span.psw {
 }
 
 .sidebar a {
-  font-family:sans-serif:
+  text-align: left;
+  font-family:sans-serif;
   padding: 6px 8px 6px 16px;
   text-decoration: none;
   margin-bottom:10px;
@@ -357,3 +354,4 @@ span.psw {
   .sidebar {padding-top: 15px;}
   .sidebar a {font-size: 18px;}
 }
+
