--- a/templates/message.html
+++ b/templates/message.html
@@ -45,15 +45,12 @@
     <a id="click1" href="/logout">Log out</a>
   </div>
   <div id="formcontact">
-  <form class="example" action="/contacts" method="post">
-    <input type="text" placeholder="Search contacts" name="user" id="contactsearch">
-    <button type="submit" id="contactsearch"></button>
-  </form>
+
   </div>
 
   <div id="select">
-   <form action="/send" method="post">
-     <select name="receiver" id="contact" onchange="getMsgs(this.value)" class="contact" multiple="multiple">
+    <form id="form" action="">
+     <select id="room" onchange="getMsgs(this.value)" class="contact" multiple="multiple">
          {% for i in contacts %}
          <option
          {% if i == chat %}
@@ -62,10 +59,10 @@
             value={{ i }}>{{ i }}</option>
          {% endfor %}
      </select>
-     <input type="text" name="msg" id="messagebox" placeholder="Type your message:"> <input type="submit" id="messagesubmit">
-   </form>
+     <input type="text" name="msg" id="msg" placeholder="Type your message:"> <button type="submit" id="messagesubmit"></button>
+    </form>
   </div>
-  <div id="msgs"></div>
+  <p id="msgs"></p>
 
    <script>
    function getMsgs(name) {
@@ -92,9 +89,10 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
    <script>
      var socket = io();
-     var messages = document.getElementById('messages');
+     var messages = document.getElementById('msgs');
      var form = document.getElementById('form');
-     var input = document.getElementById('input');
+     var input = document.getElementById('msg');
+     var room = document.getElementById('room');
 
      form.addEventListener('submit', function(e) {
        e.preventDefault();
@@ -106,7 +104,7 @@
      });
 
      socket.on('chat message', function(msg) {
-       var item = document.createElement('p');
+       var item = document.createElement('span');
        item.textContent = msg;
        messages.appendChild(item);
      });
