--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,3 +11,8 @@
   <a href="contact.html">Contact</a>
   <a href="about.html">About</a>
 </div>
+
+<form class="example" action="/contacts" method="post">
+  <input type="text" placeholder="Search contacts" name="user" id="contactsearch">
+  <button type="submit" id="contactsearch"></button>
+</form>
